# xiaomi-1080-360-motor-control

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  compile.sh  motor  motor.c  pull_libs  pull_libs.sh
.github/workflows/: build.yml  release.yml  rust.yml
golang server/: main.go  motor.c
golang server/tests/: main.go
lib/: libmiio_util.so.0.0.1  libmortox_share.so.0.0.0
mocks/: Makefile  device_kit.c  device_kit.h
src/: Dockerfile  libdevice_kit.c  libdevice_kit_simulator.c  main.rs  motor.c  motord.c
src/docker/: Dockerfile  docker_build.sh  docker_rm.sh  docker_run.sh
src/mock/: Cargo.toml
src/mock/src/: mock.rs
src/motor/: Makefile  main.c  motor.c  motor.h  motord.c  motord.v  utils.c  utils.h
src/motor/lib/: libdev.so.4  libmortox.so.0.0.0  libmortoxev.so.0.0.0
src/motor/mocks/: libdevice_kit.c
src/motor/motord/: Cargo.toml  main.v  ptz_api.v  raw_ptz_api.v  websocket_server.v
src/motor/motord/src/: main.rs
src/motor/motord/tests/: main.py
src/motor/web_server/: index.html  web_server.v
src/motord/: Cargo.toml
src/motord/src/: main.rs
src/motord/src/ptz/: mod.rs  ptz.rs
src/web_control/: Makefile  server.go
src/web_control/static/: index.html
src/web_server/: main.go
src/webserver/: main.go
