[package]
name = "control"
version = "0.1.0"
authors = ["Zadkiel <hello@zadkiel.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlopen = "0.1"
dlopen_derive = "0.1"
clap = "2.33.0"
rouille = "3.0.0"
strum = "0.17.1"
strum_macros = "0.17.1"
